# BUAA_c0_Compiler

./: .gitignore  16061067_test.txt  16061067_测试结果说明.docx  LICENSE  README.md  todo list.txt
c0Compiler/: CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.h  GlobalRegisterAllocation.cpp  GlobalRegisterAllocation.h  GrammarAnalyzer.cpp  GrammarAnalyzer.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MIPSGenerator.cpp  MIPSGenerator.h  Optimizer.cpp  Optimizer.h  Quadruple.cpp  Quadruple.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  StackManager.cpp  StackManager.h  SymbolTable.cpp  SymbolTable.h  Type.h  main.cpp
